+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.5.2c1?
=============================

*Release date: XX-XXX-XXXX*

Core and builtins
-----------------

- Issue 1704621: Fix segfaults in list_repeat() and list_inplace_repeat().

- Issue #1147: Generators were not raising a DeprecationWarning when a string
  was passed into throw().

- Patch #1031213: Decode source line in SyntaxErrors back to its original source
  encoding.

- Patch #1673759: add a missing overflow check when formatting floats
  with %G.

- Patch #1733960: Allow T_LONGLONG to accept ints.

- Prevent expandtabs() on string and unicode objects from causing a segfault
  when a large width is passed on 32-bit platforms.

- Bug #1733488: Fix compilation of bufferobject.c on AIX.


Library
-------

- Issue #1705170: contextlib.contextmanager was still swallowing
  StopIteration in some cases. This should no longer happen.

- Bug #1307: Fix smtpd so it doesn't raise an exception when there is no arg.

- ctypes will now work correctly on 32-bit systems when Python is
  configured with --with-system-ffi.

- Bug #1777530: ctypes.util.find_library uses dump(1) instead of
  objdump(1) on Solaris.

- Bug #1153: repr.repr() now doesn't require set and dictionary items
  to be orderable to properly represent them.

- Bug #1709599: Run test_1565150 only if the file system is NTFS.

- When encountering a password-protected robots.txt file the RobotFileParser
  no longer prompts interactively for a username and password (bug 813986).

- TarFile.__init__() no longer fails if no name argument is passed and
  the fileobj argument has no usable name attribute (e.g. StringIO).

- Reverted the fix for bug #1548891 because it broke compatibility with
  arbitrary read buffers. Added a note in the documentation.

- GB18030 codec now can encode additional two-byte characters that
  are missing in GBK.
